<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Pusatara</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Welcome -->
    <string name="welcome">Welcome</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="title_welcome_page">Welcome to <font color="#96490C">PUSATARA</font></string>
    <string name="message_welcome_page">Are you ready to explore Batik and Songket?</string>

    <!-- Login -->
    <string name="message_login_page">Continue your journey exploring Batik and Songket in Pusatara!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_hint">Your Email</string>
    <string name="password_hint">Your Password</string>
    <string name="donthave_account">Do you have an account?</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_invalid">Invalid Username or Password!</string>

    <!-- Signup -->
    <string name="message_signup_page">Expand your curiosity about Batik and Songket with Pusatara!</string>
    <string name="username">Username</string>
    <string name="username_hint">Your Username</string>
    <string name="already_account">Already have an account?</string>
    <string name="reg_failed">Registration Failed</string>
    <string name="reg_success">Registration Successful</string>
    <string name="reg_dupplicate">Email is already registered</string>
    <string name="empty_fields_error">Fill in all forms first</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="theme">Theme</string>
    <string name="logOut">Log Out</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_cancel">Cancel</string>

    <!--    Bottom Bar Menu-->
    <string name="bottombar_home">Home</string>
    <string name="bottombar_glossary">Glossary</string>
    <string name="bottombar_media">Media</string>

    <!-- Fragment Home-->
    <string name="hallo_home">Hallo,</string>
    <string name="dummy_username">Jane Doe</string>
    <string name="msg_greeting_home">Explore Batik and Songket</string>
    <string name="searchbar_hint">Search Batik or Songket</string>
    <string name="type_batik">Types of Batik</string>
    <string name="type_songket">Types of Songket</string>
    <string name="fab_scan">Scan</string>
    <string name="content_desc_section_btn">Navigate to Glossary</string>

    <!--Detail Activity-->
    <string name="media_detail">Detail Media</string>
    <string name="detail_title">Detail Title</string>
    <string name="detail_desc">Detail Description</string>
    <string name="error">Error: </string>
    <string name="error_internet">A network error occurred. Check your internet connection.</string>
    <string name="unauthorized">Unauthorized: Please log in again.</string>

    <!-- Fragment Media-->
    <string name="media_title">Media Title</string>
    <string name="media_updated">Media has been Updated</string>
    <string name="media_desc">Media Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptatem blanditiis qui praesentium sequi non delectus beatae, impedit minus, ab illum aspernatur recusandae, molestias vel.</string>

    <!-- Add Media Activity-->
    <string name="add_media">Add Media</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="add_media_desc">Description</string>
    <string name="empty_image_warning">Please select an image file first</string>

    <!-- Item Batik Songket-->
    <string name="tv_batik_name">Batik Name</string>
    <string name="tv_batik_desc">Batik Description</string>

    <!-- Item Scan Output-->
    <string name="tv_result_percent">0%</string>

    <!-- menu home toolbar -->
    <string name="search_btn">Search</string>
    <string name="profile_btn">Profile</string>

    <!--Item Glossary-->
    <string name="tv_glossary_name">Glossary Name</string>

    <!-- Upload Scan Activity-->
    <string name="tv_title_result">Your Result</string>
    <string name="upload_scan_bar_name">Upload Scan</string>

    <!-- Search Activity-->
    <string name="search_activity_tv">Try search Batik or Songket</string>

    <!-- Fragment Glossary-->
    <string name="content_desc_tablayout">TabLayout</string>
    <string name="tab_batik">Batik</string>
    <string name="tab_songket">Songket</string>

    <!-- Detail Glossary Activity-->
    <string name="detail_glossary_bar_name">Detail Glossary</string>
</resources>